--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^0.19.1",
+    "cheerio": "^1.0.0-rc.3",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vuex": "^3.1.2"
