--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "axios": "^0.19.1",
+    "big-integer": "^1.6.48",
     "cheerio": "^1.0.0-rc.3",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
