--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.0.5",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
     "electron": "^7.1.9",
     "eslint": "^6.8.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "lint-staged": "^10.0.1",
     "prettier": "^1.19.1",
+    "tailwindcss": "^1.1.4",
     "vue-cli-plugin-electron-builder": "^1.4.4",
     "vue-template-compiler": "^2.6.10"
   },
