--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "anisabu",
   "version": "0.1.0",
+  "description": "Crunchyroll subtitles downloader",
+  "author": {
+    "name": "Hanzuk"
+  },
+  "license": "MIT",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,6 +13,7 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "electron:icons": "electron-icon-builder --input=./public/icon.png --output=dist_electron",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
@@ -30,6 +36,7 @@
     "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.0.3",
     "electron": "^7.1.9",
+    "electron-icon-builder": "^1.0.2",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
@@ -47,5 +54,9 @@
       "vue-cli-service lint",
       "git add"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hanzuk/anisabu.git"
   }
 }
